edit brave pswd store

--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -1,7 +1,7 @@
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER
 $terminal = alacritty
-$browser = brave --ozone-platform=wayland --ozone-platform-hint=wayland 
+$browser = brave --password-store=basic --ozone-platform=wayland --ozone-platform-hint=wayland 
 $fileManager = ~/.config/scripts/classy_alacritty.sh floatty yazi
 $wifi = ~/.config/scripts/classy_alacritty.sh floatty impala
 $bluetooth = ~/.config/scripts/classy_alacritty.sh floatty bluetui
