--- a/sway/dot-config/sway/config.d/auto-start.conf
+++ b/sway/dot-config/sway/config.d/auto-start.conf
@@ -16,6 +16,7 @@ exec_always swayidle  \
 # night light 
 exec sunsetr
 # Desktop notifications
+# TODO: change notif daemon
 exec mako
 # cliphist
 exec wl-paste --type text --watch cliphist store
