--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -13,6 +13,11 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
 bind = $mainMod, P, exec, $wlogout
 bind = $mainMod, E, exec, $fileManager
+
+# TODO: add groups keybinds
+bindd = SUPER, G, Toggle window grouping, togglegroup
+bindd = SUPER ALT, G, Move active window out of group, moveoutofgroup
+
 bind = $mainMod SHIFT, E, exec, thunar
 bind = $mainMod SHIFT, B, exec, $bluetooth
 bind = $mainMod SHIFT, W, exec, $wifi
@@ -24,12 +29,11 @@ bind = $mainMod SHIFT, P, pseudo,
 bind = $mainMod, Z, exec, ~/.config/scripts/hypr_zoom.sh
 bind = $mainMod, C, exec, $screen region
 bind = $mainMod SHIFT, C, exec, $screen display
-bind = $mainMod SHIFT, l, exec, ~/.config/scripts/swaylock.sh 
+# bind = $mainMod SHIFT, l, exec, ~/.config/scripts/swaylock.sh 
 bind = $mainMod SHIFT, A, exec, ~/.config/scripts/emulator.sh
 bind = $mainMod SHIFT, D, exec, ~/.config/scripts/pkill.sh
 bind = $mainMod, f, fullscreen
 bind = $mainMod, TAB, cyclenext
-bind = SUPER SHIFT, N, exec, makoctl dismiss --all
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, V, exec, cliphist list | fuzzel -d -w 90 -l 5 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
@@ -41,6 +45,12 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, j, movefocus, d
 bind = $mainMod, k, movefocus, u
+# Move focus with SUPER + arrow keys
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
+
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
