--- a/sway/dot-config/sway/config.d/auto-start.conf
+++ b/sway/dot-config/sway/config.d/auto-start.conf
@@ -17,7 +17,7 @@ exec_always swayidle  \
 exec sunsetr
 # Desktop notifications
 # TODO: change notif daemon
-exec mako
+exec swaync
 # cliphist
 exec wl-paste --type text --watch cliphist store
 exec wl-paste --type image --watch cliphist store
