--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -15,8 +15,8 @@ bind = $mainMod, P, exec, $wlogout
 bind = $mainMod, E, exec, $fileManager
 
 # TODO: add groups keybinds
-bindd = SUPER, G, Toggle window grouping, togglegroup
-bindd = SUPER ALT, G, Move active window out of group, moveoutofgroup
+bind = SUPER, G, togglegroup
+bind = SUPER ALT, G, moveoutofgroup
 
 bind = $mainMod SHIFT, E, exec, thunar
 bind = $mainMod SHIFT, B, exec, $bluetooth
