--- a/hypr/dot-config/hypr/conf/looknfeel.conf
+++ b/hypr/dot-config/hypr/conf/looknfeel.conf
@@ -8,19 +8,14 @@
 general {
     gaps_in = 10
     gaps_out = 30
-
-    border_size = 4
-
+    border_size = 3
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(333cffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
-
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     layout = dwindle
 }
 
@@ -45,21 +40,14 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-
         vibrancy = 0.1696
     }
 }
 
-
-# TODO: fix groups style
-$activeBorderColor = rgba(33ccffee) rgba(00ff99ee) 45deg
-$inactiveBorderColor = rgba(595959aa)
-
 group {
-    col.border_active = $activeBorderColor
-    col.border_inactive = $inactiveBorderColor
-    col.border_locked_active = -1
-    col.border_locked_inactive = -1
+    col.border_active = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.border_inactive = rgba(595959aa)
+    insert_after_current = false
 
     groupbar {
         font_size = 12
@@ -79,7 +67,7 @@ group {
         col.inactive = rgba(00000020)
 
         gradients = true
-        gradient_rounding = 0
+        gradient_rounding = 10
         gradient_round_only_edges = false
     }
 }
@@ -117,17 +105,6 @@ animations {
     animation = zoomFactor,    1,     7,     quick
 }
 
-# Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
-
-# See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
