fix group binds

--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -1,4 +1,3 @@
-# See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER
 $terminal = alacritty
 $browser = brave --password-store=basic --ozone-platform=wayland --ozone-platform-hint=wayland 
@@ -8,16 +7,10 @@ $bluetooth = ~/.config/scripts/classy_alacritty.sh floatty bluetui
 $wlogout = wlogout -b 4 -T 400 -B 400
 $menu = fuzzel
 $screen = ~/.config/scripts/hypr_screen.sh
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
 bind = $mainMod, P, exec, $wlogout
 bind = $mainMod, E, exec, $fileManager
-
-# TODO: add groups keybinds
-bind = SUPER, G, togglegroup
-bind = SUPER ALT, G, moveoutofgroup
-
 bind = $mainMod SHIFT, E, exec, thunar
 bind = $mainMod SHIFT, B, exec, $bluetooth
 bind = $mainMod SHIFT, W, exec, $wifi
@@ -29,7 +22,6 @@ bind = $mainMod SHIFT, P, pseudo,
 bind = $mainMod, Z, exec, ~/.config/scripts/hypr_zoom.sh
 bind = $mainMod, C, exec, $screen region
 bind = $mainMod SHIFT, C, exec, $screen display
-# bind = $mainMod SHIFT, l, exec, ~/.config/scripts/swaylock.sh 
 bind = $mainMod SHIFT, A, exec, ~/.config/scripts/emulator.sh
 bind = $mainMod SHIFT, D, exec, ~/.config/scripts/pkill.sh
 bind = $mainMod, f, fullscreen
@@ -39,24 +31,26 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, V, exec, cliphist list | fuzzel -d -w 90 -l 5 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
 bind = $mainMod, X, exec, cliphist list | fuzzel -d -w 90 -l 5 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
 bind = $mainMod SHIFT, X, exec, ~/.config/scripts/layout.sh
-
-# Move focus with mainMod + arrow keys
+bind = $mainMod, G, togglegroup
+bind = $mainMod SHIFT, G, moveoutofgroup
+bindd = $mainMod SHIFT, H, Move window to group on left, moveintogroup, l
+bindd = $mainMod SHIFT, L, Move window to group on right, moveintogroup, r
+bindd = $mainMod SHIFT, K, Move window to group on top, moveintogroup, u
+bindd = $mainMod SHIFT, J, Move window to group on bottom, moveintogroup, d
+bindd = $mainMod, l, Move grouped window focus right, changegroupactive, f
+bindd = $mainMod, h, Move grouped window focus left, changegroupactive, b
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, j, movefocus, d
 bind = $mainMod, k, movefocus, u
-# Move focus with SUPER + arrow keys
 bind = $mainMod SHIFT, H, movewindow, l
 bind = $mainMod SHIFT, L, movewindow, r
 bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
-
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -67,8 +61,6 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -79,13 +71,8 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-
-# Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
