--- a/hypr/dot-config/hypr/conf/rules.conf
+++ b/hypr/dot-config/hypr/conf/rules.conf
@@ -12,3 +12,9 @@ windowrule {
   center = on
   size = 1800 1200
 }
+windowrule {
+    name = float img preview ueberzug
+    match:class = ueberzugpp.+
+    float = on
+    no_initial_focus = on
+}
