--- a/hypr/dot-config/hypr/conf/rules.conf
+++ b/hypr/dot-config/hypr/conf/rules.conf
@@ -6,6 +6,13 @@ windowrule {
   size = 1800 1200
 }
 windowrule {
+  name = float imv
+  match:class = imv
+  float = on
+  center = on
+  size = 1900 1000
+}
+windowrule {
   name = float thunar
   match:class = thunar
   float = on
