--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -40,17 +40,15 @@ set -g @floax-bind '-n M-p'
 set -g @floax-title 'Floating Terminal'
 set -g @floax-session-name 'floax-session'
 set -g @floax-change-path 'false'
-set -g @floax-text-color 'white'
-set -g @floax-border-color 'blue'
 #################################################
 ####### STATUS BAR SETTINGS #######
 ####### VARIABLES (Colors) #######
-set -g @text_color "#000000"        # near-white foreground
-set -g @inactive_color "#5a6374"    # soft gray/blue
-set -g @active_color "#7e9cd8"      # soft blue active
-set -g @session_color "#957fb8"     # muted violet session
-set -g @prefix_color "#c34043"      # muted red prefix
-set -g @left_bubble_color "#76946a" # soft green/teal left bubble
+set -g @text_color "#000000"       
+set -g @active_color "#cdd6f4"    
+set -g @inactive_color "#a6adc8"    
+set -g @session_color "#89b4fa"  
+set -g @prefix_color "#f38ba8"
+set -g @left_bubble_color "#a6e3a1" 
 set -g status-position top
 set -g status-justify "absolute-centre"
 set -g status 2
