--- a/hypr/dot-config/hypr/hyprpaper.conf
+++ b/hypr/dot-config/hypr/hyprpaper.conf
@@ -3,3 +3,7 @@ wallpaper {
     monitor = DP-2
     path = /home/khalil/dotfiles/assets/dot-config/assets/background.png
 }
+wallpaper {
+    monitor = DP-2
+    path = /home/khalil/dotfiles/assets/dot-config/assets/background.png
+}
