add walpaper to laptop monitor

--- a/hypr/dot-config/hypr/hyprpaper.conf
+++ b/hypr/dot-config/hypr/hyprpaper.conf
@@ -1,6 +1,6 @@
 splash = false
 wallpaper {
-    monitor = DP-2
+    monitor = eDP-1
     path = /home/khalil/dotfiles/assets/dot-config/assets/background.png
 }
 wallpaper {
