--- a/hypr/dot-config/hypr/conf/rules.conf
+++ b/hypr/dot-config/hypr/conf/rules.conf
@@ -25,3 +25,8 @@ windowrule {
     float = on
     no_initial_focus = on
 }
+windowrule {
+  name = full screen guitarix
+  match:class = guitarix
+  float = off
+}
