--- a/sway/dot-config/sway/config.d/keybinds.conf
+++ b/sway/dot-config/sway/config.d/keybinds.conf
@@ -8,7 +8,7 @@ set $term alacritty
 bindsym $mod+space exec $term
 
 # Set default browser
-set $browser google-chrome-stable --ozone-platform=wayland --ozone-platform-hint=wayland 
+set $browser brave
 
 # Launch the browser
 bindsym $mod+b exec $browser
