--- a/hypr/dot-config/hypr/conf/auto-start.conf
+++ b/hypr/dot-config/hypr/conf/auto-start.conf
@@ -6,6 +6,7 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = sunsetr
 exec-once = swaync
 exec-once = hyprpaper 
+exec-once = hypridle 
 exec-once = ~/.config/scripts/blue-speaker.sh
 execr = pkill waybar; waybar
 exec-once = wl-paste --type text --watch cliphist store
