--- a/hypr/dot-config/hypr/hypridle.conf
+++ b/hypr/dot-config/hypr/hypridle.conf
@@ -1,5 +1,4 @@
 listener {
-    timeout = 10                            # in seconds.
-    on-timeout = notify-send "You are idle!" # command to run when timeout has passed.
-    on-resume = notify-send "Welcome back!"  # command to run when activity is detected after timeout has fired.
+    timeout = 600                            # in seconds.
+    on-timeout = ~/.config/scripts/swaylock.sh
 }
