--- a/sway/dot-config/sway/config.d/keybinds.conf
+++ b/sway/dot-config/sway/config.d/keybinds.conf
@@ -46,6 +46,7 @@ bindsym $mod+Shift+d exec ~/.config/scripts/pkill.sh
 bindsym $mod+Shift+a exec ~/.config/scripts/emulator.sh
 # keyboard layout
 bindsym $mod+x exec ~/.config/scripts/layout.sh
+bindsym $mod+n exec swaync-client -C
 
 # ------------------
 # Audio controls
