add notif keybind

--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -29,7 +29,9 @@ bind = $mainMod, f, fullscreen
 bind = $mainMod, TAB, cyclenext
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, N, exec, swaync-client --hide-all
 bind = $mainMod SHIFT, N, exec, swaync-client -C
+bind = $mainMod, T, exec, swaync-client -t
 bind = $mainMod, V, exec, cliphist list | fuzzel -d -w 90 -l 5 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
 bind = $mainMod, X, exec, cliphist list | fuzzel -d -w 90 -l 5 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
 bind = $mainMod SHIFT, X, exec, ~/.config/scripts/layout.sh
