--- a/tmux/dot-tmuxp/scraping.yaml
+++ b/tmux/dot-tmuxp/scraping.yaml
@@ -6,3 +6,5 @@ windows:
     shell_command_before: nvim
     focus: true
   - window_name: "shell"
+  - window_name: "aichat"
+    shell_command_before: aises
