add tmux aichat response

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -27,6 +27,7 @@ unbind q
 bind q kill-window
 #################################################
 bind e run "sh -c ~/.config/scripts/vim_edit.sh"
+bind m run "sh -c ~/.config/scripts/aichat.sh"
 #################################################
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
