--- a/hypr/dot-config/hypr/conf/rules.conf
+++ b/hypr/dot-config/hypr/conf/rules.conf
@@ -1,32 +1,45 @@
 windowrule {
-  name = float window
-  match:class = floatty
-  float = on
-  center = on
-  size = 1800 1200
+    name = float window
+    match:class = floatty
+    float = on
+    center = on
+    size = 1800 1200
 }
 windowrule {
-  name = float imv
-  match:class = imv
-  float = on
-  center = on
-  size = 1900 1000
+    name = float imv
+    match:class = imv
+    float = on
+    center = on
+    size = 1900 1000
 }
 windowrule {
-  name = float thunar
-  match:class = thunar
-  float = on
-  center = on
-  size = 1800 1200
+    name = float thunar
+    match:class = thunar
+    float = on
+    center = on
+    size = 1800 1200
 }
 windowrule {
     name = float img preview ueberzug
     match:class = ueberzugpp.+
     float = on
     no_initial_focus = on
+    no_focus = on
+    border_size = 0
+    # no_anim = on
 }
 windowrule {
-  name = full screen guitarix
-  match:class = guitarix
-  float = off
+    name = full screen guitarix
+    match:class = guitarix
+    float = off
+}
+windowrule {
+    name = showmethekey
+    match:class = showmethekey-gtk
+    float = on
+    no_focus = on
+    no_initial_focus = on
+    pin = on
+    size = 300 100
+    move = 2225 1305
 }
