--- a/hypr/dot-config/hypr/hypridle.conf
+++ b/hypr/dot-config/hypr/hypridle.conf
@@ -1,4 +1,4 @@
 listener {
-    timeout = 600                            # in seconds.
+    timeout = 600
     on-timeout = ~/.config/scripts/swaylock.sh
 }
