--- a/tmux/dot-tmuxp/invest.yaml
+++ b/tmux/dot-tmuxp/invest.yaml
@@ -1,10 +1,10 @@
-session_name: craft
+
+session_name: investments
 suppress_history: true
-start_directory: ~/ccraft
+start_directory: ~/investments
 windows:
-  - window_name: "src"
+  - window_name: "notes"
     shell_command_before: nvim
     focus: true
-  - window_name: "shell"
   - window_name: "aichat"
     shell_command_before: aises
