--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ venv
 ssh/.ssh/known*
 ssh/dot-ssh/known*
 task/dot-task/taskchampion*
-aichat/dot-config/aichat/sessions/*
-aichat/dot-config/aichat/rags/*
+aichat/dot-config/aichat/sessions
+aichat/dot-config/aichat/rags
