move back to chrome

--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -1,6 +1,6 @@
 $mainMod = SUPER
 $terminal = alacritty
-$browser = brave 
+$browser = google-chrome-stable 
 $fileManager = ~/.config/scripts/classy_alacritty.sh floatty yazi
 $wifi = ~/.config/scripts/classy_alacritty.sh floatty impala
 $bluetooth = ~/.config/scripts/classy_alacritty.sh floatty bluetui
