--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -20,6 +20,8 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod SHIFT, P, pseudo,
 bind = $mainMod, Z, exec, ~/.config/scripts/hypr_zoom.sh
+bind = $mainMod, KP_ADD, exec, ~/.config/scripts/hypr_zoom_scroll.sh in
+bind = $mainMod, minus, exec, ~/.config/scripts/hypr_zoom_scroll.sh out
 bind = $mainMod SHIFT, Z, exec, ~/.config/scripts/sway_zoom.sh
 bind = $mainMod, C, exec, $screen region
 bind = $mainMod SHIFT, C, exec, $screen display
