--- a/hypr/dot-config/hypr/hyprpaper.conf
+++ b/hypr/dot-config/hypr/hyprpaper.conf
@@ -1,9 +1,9 @@
 splash = false
 wallpaper {
     monitor = eDP-1
-    path = /home/khalil/dotfiles/assets/dot-config/assets/background.png
+    path = /home/khalil/dotfiles/assets/dot-config/assets/adam_dark.jpeg
 }
 wallpaper {
     monitor = DP-2
-    path = /home/khalil/dotfiles/assets/dot-config/assets/background.png
+    path = /home/khalil/dotfiles/assets/dot-config/assets/adam_light.png
 }
