--- a/hypr/dot-config/hypr/conf/rules.conf
+++ b/hypr/dot-config/hypr/conf/rules.conf
@@ -6,6 +6,13 @@ windowrule {
     size = 1800 1200
 }
 windowrule {
+    name = mupdf
+    match:class = MuPDF
+    float = on
+    center = on
+    size = 1500 1300
+}
+windowrule {
     name = float imv
     match:class = imv
     float = on
