--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -18,6 +18,7 @@ bind = $mainMod SHIFT, F, togglefloating,
 bind = $mainMod, SPACE, exec, $terminal
 bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
+bind = $mainMod, A, exec, wayscriber --active
 bind = $mainMod SHIFT, P, pseudo,
 bind = $mainMod, Z, exec, ~/.config/scripts/hypr_zoom.sh
 bind = $mainMod, KP_ADD, exec, ~/.config/scripts/hypr_zoom_scroll.sh in
