remove script extensions

--- a/hypr/dot-config/hypr/conf/auto-start.conf
+++ b/hypr/dot-config/hypr/conf/auto-start.conf
@@ -7,9 +7,8 @@ exec-once = sunsetr
 exec-once = swaync
 exec-once = hyprpaper 
 exec-once = hypridle 
-exec-once = ~/.config/scripts/blue-speaker.sh
+exec-once = ~/.config/scripts/blue_speaker
 execr = pkill waybar; waybar
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = nm-applet --indicator
-exec-once = ~/.config/scripts/blue-speaker.sh
