--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -1,12 +1,12 @@
 $mainMod = SUPER
 $terminal = alacritty
 $browser = google-chrome-stable 
-$fileManager = ~/.config/scripts/classy_alacritty.sh floatty yazi
-$wifi = ~/.config/scripts/classy_alacritty.sh floatty impala
-$bluetooth = ~/.config/scripts/classy_alacritty.sh floatty bluetui
+$fileManager = ~/.config/scripts/classy_alacritty floatty yazi
+$wifi = ~/.config/scripts/classy_alacritty floatty impala
+$bluetooth = ~/.config/scripts/classy_alacritty floatty bluetui
 $wlogout = wlogout -b 4 -T 400 -B 400
 $menu = fuzzel
-$screen = ~/.config/scripts/hypr_screen.sh
+$screen = ~/.config/scripts/hypr_screen
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, Q, killactive,
 bind = $mainMod, P, exec, $wlogout
@@ -20,14 +20,14 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod, A, exec, wayscriber --active
 bind = $mainMod SHIFT, P, pseudo,
-bind = $mainMod, Z, exec, ~/.config/scripts/hypr_zoom.sh
-bind = $mainMod, KP_ADD, exec, ~/.config/scripts/hypr_zoom_scroll.sh in
-bind = $mainMod, minus, exec, ~/.config/scripts/hypr_zoom_scroll.sh out
-bind = $mainMod SHIFT, Z, exec, ~/.config/scripts/sway_zoom.sh
+bind = $mainMod, Z, exec, ~/.config/scripts/hypr_zoom
+bind = $mainMod, KP_ADD, exec, ~/.config/scripts/hypr_zoom_scroll in
+bind = $mainMod, minus, exec, ~/.config/scripts/hypr_zoom_scroll out
+bind = $mainMod SHIFT, Z, exec, ~/.config/scripts/sway_zoom
 bind = $mainMod, C, exec, $screen region
 bind = $mainMod SHIFT, C, exec, $screen display
-bind = $mainMod SHIFT, A, exec, ~/.config/scripts/emulator.sh
-bind = $mainMod SHIFT, D, exec, ~/.config/scripts/pkill.sh
+bind = $mainMod SHIFT, A, exec, ~/.config/scripts/emulator
+bind = $mainMod SHIFT, D, exec, ~/.config/scripts/pkill
 bind = $mainMod, f, fullscreen
 bind = $mainMod, TAB, cyclenext
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -37,7 +37,7 @@ bind = $mainMod SHIFT, N, exec, swaync-client -C
 bind = $mainMod, T, exec, swaync-client -t
 bind = $mainMod, V, exec, cliphist list | fuzzel -d -w 90 -l 5 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
 bind = $mainMod, X, exec, cliphist list | fuzzel -d -w 90 -l 5 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
-bind = $mainMod SHIFT, X, exec, ~/.config/scripts/layout.sh
+bind = $mainMod SHIFT, X, exec, ~/.config/scripts/layout
 bind = $mainMod, G, togglegroup
 bind = $mainMod SHIFT, G, moveoutofgroup
 bindd = $mainMod SHIFT, H, Move window to group on left, moveintogroup, l
