--- a/sway/dot-config/sway/config.d/keybinds.conf
+++ b/sway/dot-config/sway/config.d/keybinds.conf
@@ -37,15 +37,15 @@ bindsym $mod+v exec cliphist list | fuzzel -d -w 90 -l 5 -p "Select an entry to 
 bindsym $mod+Shift+x exec cliphist list | fuzzel -d -w 90 -l 5 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
 # Note: you can clear all cliphist entries by running `cliphist wipe`
 # zoom
-bindsym $mod+z exec  ~/.config/scripts/sway_zoom.sh
+bindsym $mod+z exec  ~/.config/scripts/sway_zoom
 # theme switcher
-bindsym $mod+Ctrl+t exec ~/.config/scripts/theme_switcher.sh
+bindsym $mod+Ctrl+t exec ~/.config/scripts/theme_switcher
 # pkill
-bindsym $mod+Shift+d exec ~/.config/scripts/pkill.sh
+bindsym $mod+Shift+d exec ~/.config/scripts/pkill
 # Android emulator
-bindsym $mod+Shift+a exec ~/.config/scripts/emulator.sh
+bindsym $mod+Shift+a exec ~/.config/scripts/emulator
 # keyboard layout
-bindsym $mod+x exec ~/.config/scripts/layout.sh
+bindsym $mod+x exec ~/.config/scripts/layout
 bindsym $mod+n exec swaync-client -C
 
 # ------------------
@@ -85,7 +85,7 @@ bindsym $mod+o exec ~/.config/scripts/audio_picker.sh sink
 set {
   $screenshot "Screenshot: [D]isplay or [W]indow or [R]egion"
 
-  $screenshot-cmd ~/.config/scripts/sway_screen.sh
+  $screenshot-cmd ~/.config/scripts/sway_screen
 }
 
 mode $screenshot {
