--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -26,8 +26,8 @@ bind C-q kill-session
 unbind q
 bind q kill-window
 #################################################
-bind e run "sh -c ~/.config/scripts/vim_edit.sh"
-bind m run "sh -c ~/.config/scripts/aichat.sh"
+bind e run "sh -c ~/.config/scripts/vim_edit"
+bind m run "sh -c ~/.config/scripts/aichat"
 #################################################
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
