--- a/sway/dot-config/sway/config.d/auto-start.conf
+++ b/sway/dot-config/sway/config.d/auto-start.conf
@@ -10,7 +10,7 @@ exec hash dbus-update-activation-environment 2>/dev/null && \
 
 # Inform swayidle/systemd that the system is idle (starts idle timers)
 exec_always swayidle  \
-    timeout 1200 '~/.config/scripts/swaylock.sh' \
+    timeout 1200 '~/.config/scripts/swaylock' \
     # timeout 7200 'systemctl poweroff' \
 
 # night light 
@@ -22,6 +22,6 @@ exec wl-paste --type text --watch cliphist store
 exec wl-paste --type image --watch cliphist store
 # Network Applet
 exec nm-applet --indicator
-exec ~/.config/scripts/blue-speaker.sh
-exec ~/.config/scripts/swaybg.sh
+exec ~/.config/scripts/blue_speaker
+exec ~/.config/scripts/swaybg
 
