--- a/hypr/dot-config/waybar/config.jsonc
+++ b/hypr/dot-config/waybar/config.jsonc
@@ -60,8 +60,14 @@
         "backlight",
         "battery",
         "tray",
+        "custom/mouse",
         "custom/power"
     ],
+    "custom/mouse": {
+        "format": " {}",
+        "interval": 3600, // Every hour (60 * 60 seconds)
+        "exec": "~/.config/scripts/mouse_battery"
+    },
     "network": {
         "format-disabled": " Disabled",
         "format-wifi": "    {bandwidthDownBits:>} 󰶡 {bandwidthUpBits:>} 󰶣",
