--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -82,4 +82,20 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bind = , XF86AudioRaiseVolume ,exec ,amixer -q -D pipewire sset Master 5%+ 
+bind = ,XF86AudioLowerVolume, exec, amixer -q -D pipewire sset Master 5%-
+bind = ,XF86AudioMute, exec, amixer -q -D pipewire sset Master toggle 
+bind = $mainMod,XF86AudioRaiseVolume, exec, amixer -q -D pipewire sset Capture 5%+ 
+bind = $mainMod,XF86AudioLowerVolume, exec, amixer -q -D pipewire sset Capture 5%- 
+bind = $mainMod, XF86AudioMute, exec, amixer -q -D pipewire sset Capture toggle
+bind = CTRL, XF86AudioNext, exec, playerctl position 5+
+bind = CTRL, XF86AudioPrev, exec, playerctl position 5-
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioPlay, exec, playerctl play-pause
+$audio_switch_cmd= ~/.config/scripts/audio_picker
+bind= $mainMod, i, exec, $audio_switch_cmd "source"
+bind= $mainMod, o, exec, $audio_switch_cmd "sink"
