remove some window rules

--- a/hypr/dot-config/hypr/conf/rules.conf
+++ b/hypr/dot-config/hypr/conf/rules.conf
@@ -1,10 +1,10 @@
-windowrule {
-    name = float window
-    match:class = floatty
-    float = on
-    center = on
-    size = 1800 1200
-}
+# windowrule {
+#     name = float window
+#     match:class = floatty
+#     float = on
+#     center = on
+#     size = 1800 1200
+# }
 windowrule {
     name = mupdf
     match:class = MuPDF
@@ -19,13 +19,13 @@ windowrule {
     center = on
     size = 1900 1000
 }
-windowrule {
-    name = float thunar
-    match:class = thunar
-    float = on
-    center = on
-    size = 1800 1200
-}
+# windowrule {
+#     name = float thunar
+#     match:class = thunar
+#     float = on
+#     center = on
+#     size = 1800 1200
+# }
 windowrule {
     name = float img preview ueberzug
     match:class = ueberzugpp.+
