change tmuxp layout file

--- a/tmux/dot-tmuxp/learn_rust.yaml
+++ b/tmux/dot-tmuxp/learn_rust.yaml
@@ -1,6 +1,6 @@
 session_name: Learn Rust
 suppress_history: true
-start_directory: ~/learn_rust
+start_directory: ~/theRustBook/
 windows:
   - window_name: "src"
     shell_command_before: nvim
