add screenshare rules

--- a/hypr/dot-config/hypr/conf/rules.conf
+++ b/hypr/dot-config/hypr/conf/rules.conf
@@ -43,3 +43,14 @@ windowrule {
     size = 300 100
     move = 2225 1305
 }
+windowrule {
+    name = screenshare_indicator
+    match:title = .+ is sharing .+
+    float = on
+    no_focus = on
+    border_size = 0
+    no_initial_focus = on
+    pin = on
+    size = 510 64
+    move = 1028 1380
+}
